# utdataflow

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py  utdataflowConfig.cmake
cmake/: dtrace.cmake  etw.cmake
doc/: probes_ubitrack_dataflow.d.base
doc/etw/: ubitrack_etw_providers.man.base
src/: CMakeLists.txt  SConscript
src/utDataflow/: Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  DLLoader.h  DataflowNetwork.cpp  DataflowNetwork.h  ETWTracing.cpp  ETWTracing.h  EventQueue.cpp  EventQueue.h  EventTypeTraits.h  Module.h  PullConsumer.h  PushSupplier.h  SConscript  TracingProvider.h
src/utGraph/: AttributeExpression.cpp  KeyValueAttributes.cpp  PredicateParser.cpp  UTQLSRGManager.h
